--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 celery==5.0.5
 Django==3.0
 django-celery-beat==2.2.0
+django-debug-toolbar==3.2.1
+django-redis==4.12.1
+djangorestframework==3.12.4
+fpdf==1.7.2
 openpyxl==3.0.7
 pdfkit==0.6.1
 redis==3.5.3
-# reorder-python-imports==2.5.0
+reorder-python-imports==2.5.0
 requests==2.25.1
+xlrd==2.0.1
 XlsxWriter==1.4.3
-django-redis==4.12.1
-django-debug-toolbar==3.2.1
