--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,13 @@ reorder-python-imports==2.5.0
 requests==2.25.1
 xlrd==2.0.1
 XlsxWriter==1.4.3
+google-api-core==1.28.0
+google-api-python-client==2.5.0
+google-auth==1.30.1
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+googleapis-common-protos==1.53.0
+google-auth-oauthlib==0.4.4
+oauth2client==4.1.3
+oauthlib==3.1.0
+requests-oauthlib==1.3.0
